--- a/.github/workflows/validate_data.yml
+++ b/.github/workflows/validate_data.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches:
       - master
-name: Pull request workflow
+name: Data Validation PR Workflow
 jobs:
   validate_zone_data:
     name: Validate Data
