--- a/.github/workflows/validate_data.yml
+++ b/.github/workflows/validate_data.yml
@@ -1,8 +1,4 @@
-on:
-  workflow_dispatch:
-  pull_request:
-    branches:
-      - master
+on: [pull_request, workflow_dispatch]
 name: Data Validation PR Workflow
 jobs:
   validate_zone_data:
