--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,7 +1,7 @@
 on:
-  # push:
-  # pull_request:
-  #   types: [opened, synchronize, reopened]
+  push:
+  pull_request:
+    types: [opened, synchronize, reopened]
   workflow_dispatch:
 
 name: Validate ✅
