--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Install @chain-registry/cli 📜
         run: |
-          npm install -g @chain-registry/cli@1.45.0
+          npm install -g @chain-registry/cli@1.46.0
 
       - name: Validate ✓
         run: |
-          chain-registry validate --registryDir .
+          chain-registry validate --registryDir . --logLevel error
