--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Validate ✓
         run: |
-          chain-registry validate --registryDir . --logLevel info
+          chain-registry validate --registryDir . --logLevel error
